--- a/task2/task2.ipynb
+++ b/task2/task2.ipynb
@@ -140,27 +140,12 @@
    "id": "04196a0c-d70a-4f30-8f68-061ddee1478b",
    "metadata": {},
    "source": [
-    "輸出100張後，發現\n",
-    "    填色不完全 100%\n",
-    "    填色溢出    87%\n",
-    "    異常填色    57%"
+    "輸出100張後，發現  \n",
+    "填色不完全 100%  \n",
+    "填色溢出    87%  \n",
+    "異常填色    57%  \n",
+    "目前正在研究展夆的postprocessing_backgound_mask_copy.ipynb"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6720fb8d-c138-4682-9c0d-fe5076f075f9",
-   "metadata": {},
-   "source": [
-    "目前正在研究展峯的postprocessing_backgound_mask_copy.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cebcdb3-b870-4599-9d8c-248209b94c60",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
