--- a/task1/task1.ipynb
+++ b/task1/task1.ipynb
@@ -5,7 +5,7 @@
    "id": "5654f262-85e5-4cb2-883f-f14d294be1cf",
    "metadata": {},
    "source": [
-    "Step1 albert"
+    "Step1"
    ]
   },
   {
