--- a/v4.40/task1/Task1.ipynb
+++ b/v4.40/task1/Task1.ipynb
@@ -1697,91 +1697,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## b - (a ∩ b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import cv2\n",
-    "# import numpy as np\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import os\n",
-    "# import glob\n",
-    "\n",
-    "# # 定義輸入資料夾和輸出資料夾路徑\n",
-    "# a_folder = 'D:/MCUT/SSTek/test/imgv0.2/dentin'\n",
-    "# b_folder = 'D:/MCUT/SSTek/test/imgv0.2/Maskv0.2'\n",
-    "# output_folder = 'D:/MCUT/SSTek/test/imgv0.2/fin_mask'\n",
-    "\n",
-    "# # 確保輸出資料夾存在，若無則創建\n",
-    "# if not os.path.exists(output_folder):\n",
-    "#     os.makedirs(output_folder)\n",
-    "\n",
-    "# # 讀取資料夾中的所有 PNG 圖片\n",
-    "# a_images = glob.glob(os.path.join(a_folder, \"*.png\"))\n",
-    "# b_images = glob.glob(os.path.join(b_folder, \"*.png\"))\n",
-    "\n",
-    "# # 確保 a_images 和 b_images 數量一致\n",
-    "# if len(a_images) != len(b_images):\n",
-    "#     raise ValueError(\"The number of images in the two folders must be the same.\")\n",
-    "\n",
-    "# # 逐一處理每對圖片\n",
-    "# for a_path, b_path in zip(a_images, b_images):\n",
-    "#     # 讀取圖片 a 和 b\n",
-    "#     a_img = cv2.imread(a_path, cv2.IMREAD_GRAYSCALE)  # a 需要轉換成灰度\n",
-    "#     b_img = cv2.imread(b_path, cv2.IMREAD_GRAYSCALE)  # b 同樣使用灰度\n",
-    "\n",
-    "#     # 確保圖片大小相同\n",
-    "#     if a_img.shape != b_img.shape:\n",
-    "#         raise ValueError(f\"Images {os.path.basename(a_path)} and {os.path.basename(b_path)} must have the same dimensions\")\n",
-    "\n",
-    "#     # 創建二值化的遮罩，設定閾值將圖像轉換為二進制\n",
-    "#     _, a_binary = cv2.threshold(a_img, 127, 255, cv2.THRESH_BINARY)\n",
-    "#     _, b_binary = cv2.threshold(b_img, 127, 255, cv2.THRESH_BINARY)\n",
-    "\n",
-    "#     # 取交集，得到 a 和 b 的重疊部分\n",
-    "#     intersection = cv2.bitwise_and(a_binary, b_binary)\n",
-    "\n",
-    "#     # b 減去交集部分，得到最終結果\n",
-    "#     result = cv2.bitwise_and(b_binary, cv2.bitwise_not(intersection))\n",
-    "\n",
-    "#     # 顯示圖片\n",
-    "#     plt.figure(figsize=(12, 4))\n",
-    "\n",
-    "#     plt.subplot(1, 3, 1)\n",
-    "#     plt.title('a_binary')\n",
-    "#     plt.imshow(a_binary, cmap='gray')\n",
-    "#     plt.axis('off')  # 隱藏坐標軸\n",
-    "\n",
-    "#     plt.subplot(1, 3, 2)\n",
-    "#     plt.title('b_binary')\n",
-    "#     plt.imshow(b_binary, cmap='gray')\n",
-    "#     plt.axis('off')  # 隱藏坐標軸\n",
-    "\n",
-    "#     plt.subplot(1, 3, 3)\n",
-    "#     plt.title('Intersection')\n",
-    "#     plt.imshow(intersection, cmap='gray')\n",
-    "#     plt.axis('off')  # 隱藏坐標軸\n",
-    "\n",
-    "#     plt.tight_layout()\n",
-    "#     plt.show()\n",
-    "\n",
-    "#     # 生成新的檔名並保存結果圖片\n",
-    "#     filename = os.path.basename(b_path)  # 提取 b 的檔名\n",
-    "#     intersection_path = os.path.join(output_folder, f\"intersection_{filename}\")  # 命名方式：intersection_+原檔名\n",
-    "#     cv2.imwrite(intersection_path, intersection)\n",
-    "\n",
-    "# print(f\"所有圖片已處理完畢，結果保存到資料夾: {output_folder}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 覆蓋圖片"
    ]
   },
@@ -2140,7 +2055,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task2"
+    "# Task2  \n",
+    "未完成"
    ]
   },
   {
