--- a/v4.40/task1and2/Task1_and_Task2.ipynb
+++ b/v4.40/task1and2/Task1_and_Task2.ipynb
@@ -2300,22 +2300,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 開始計算IOU"
+    "### 開始計算IOU  \n",
+    "300-IOU"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "驗證檔案 : combined_1.png\n",
+      "訓練檔案 : color_1.png\n",
+      "IoU: 0.9151614420733011\n",
+      "\n",
+      "驗證檔案 : combined_2.png\n",
+      "訓練檔案 : color_2.png\n",
+      "IoU: 0.7285311353655551\n",
+      "\n",
+      "驗證檔案 : combined_3.png\n",
+      "訓練檔案 : color_3.png\n",
+      "IoU: 0.6469538626776842\n",
+      "\n",
+      "驗證檔案 : combined_4.png\n",
+      "訓練檔案 : color_4.png\n",
+      "IoU: 0.8174695673100221\n",
+      "\n",
+      "驗證檔案 : combined_5.png\n",
+      "訓練檔案 : color_5.png\n",
+      "IoU: 0.7097376415264105\n",
+      "\n",
+      "驗證檔案 : combined_6.png\n",
+      "訓練檔案 : color_6.png\n",
+      "IoU: 0.6570927329014769\n",
+      "\n",
+      "驗證檔案 : combined_7.png\n",
+      "訓練檔案 : color_7.png\n",
+      "IoU: 0.7896678633260997\n",
+      "\n",
+      "驗證檔案 : combined_8.png\n",
+      "訓練檔案 : color_8.png\n",
+      "IoU: 0.671699510733817\n",
+      "\n",
+      "驗證檔案 : combined_9.png\n",
+      "訓練檔案 : color_9.png\n",
+      "IoU: 0.7231055326160435\n",
+      "\n",
+      "驗證檔案 : combined_10.png\n",
+      "訓練檔案 : color_10.png\n",
+      "IoU: 0.8008479938208202\n",
+      "\n",
+      "平均 IoU: 0.7460267282351231\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
     "from PIL import Image\n",
     "from natsort import natsorted\n",
     "\n",
-    "def calculate_iou(mask1, mask2):\n",
-    "    # IOU計算\n",
+    "def 計算_iou(mask1, mask2):\n",
+    "    # 計算 IoU\n",
     "    mask1 = np.array(mask1).astype(bool)\n",
     "    mask2 = np.array(mask2).astype(bool)\n",
     "    intersection = np.logical_and(mask1, mask2).sum()\n",
@@ -2323,44 +2372,185 @@
     "    iou = intersection / union if union != 0 else 0\n",
     "    return iou\n",
     "\n",
-    "def process_folders(training_folder, validation_folder):\n",
-    "    # 自然排序讀取文件\n",
-    "    training_files = natsorted(os.listdir(training_folder))\n",
-    "    validation_files = natsorted(os.listdir(validation_folder))\n",
+    "def 處理資料夾(訓練資料夾, 驗證資料夾):\n",
+    "    # 自然排序讀取訓練和驗證資料夾中的圖片文件\n",
+    "    訓練文件 = natsorted([f for f in os.listdir(訓練資料夾) if f.endswith('.png')])\n",
+    "    驗證文件 = natsorted([f for f in os.listdir(驗證資料夾) if f.endswith('.png')])\n",
+    "\n",
+    "    # 檢查訓練和驗證資料夾的文件數量是否一致\n",
+    "    if len(訓練文件) != len(驗證文件):\n",
+    "        raise ValueError(\"訓練資料夾和驗證資料夾中的文件數量不一致。\")\n",
+    "    \n",
     "    ious = []\n",
-    "    for train_file, val_file in zip(training_files, validation_files):\n",
-    "        train_path = os.path.join(training_folder, train_file)\n",
-    "        val_path = os.path.join(validation_folder, val_file)\n",
+    "    for 訓練檔案, 驗證檔案 in zip(訓練文件, 驗證文件):\n",
+    "        訓練路徑 = os.path.join(訓練資料夾, 訓練檔案)\n",
+    "        驗證路徑 = os.path.join(驗證資料夾, 驗證檔案)\n",
     "        try:\n",
-    "            if train_path.endswith('.png') and val_path.endswith('.png'):\n",
-    "                mask_train = Image.open(train_path).convert('L')\n",
-    "                mask_val = Image.open(val_path).convert('L')\n",
-    "                \n",
-    "                iou = calculate_iou(mask_train, mask_val)\n",
-    "                ious.append((train_file, val_file, iou))\n",
-    "        except:\n",
-    "            pass\n",
+    "            # 打開並轉換圖片為灰階遮罩\n",
+    "            mask_train = Image.open(訓練路徑).convert('L')\n",
+    "            mask_val = Image.open(驗證路徑).convert('L')\n",
+    "            \n",
+    "            # 計算 IoU\n",
+    "            iou = 計算_iou(mask_train, mask_val)\n",
+    "            ious.append((訓練檔案, 驗證檔案, iou))\n",
+    "        except Exception as e:\n",
+    "            print(f\"處理 {訓練檔案} 和 {驗證檔案} 時出錯：{e}\")\n",
+    "            continue  # 跳過無法處理的文件\n",
     "    return ious\n",
     "\n",
-    "# 訓練集與驗證集文件夾路徑\n",
-    "training_folder = mask_dir\n",
-    "validation_folder = processed_dir\n",
+    "# 訓練集和驗證集的資料夾路徑\n",
+    "訓練資料夾 = r\"C:\\Users\\SSTek\\Desktop\\LianChia\\task\\v4.40\\task1and2\\imgv0.2\\300_color\" \n",
+    "驗證資料夾 = r\"C:\\Users\\SSTek\\Desktop\\LianChia\\task\\v4.40\\task1and2\\imgv0.2\\300_processed\"  \n",
     "\n",
-    "# 計算所有文件的IoU\n",
-    "ious = process_folders(training_folder, validation_folder)\n",
+    "# 計算資料夾中對應文件的 IoU\n",
+    "ious = 處理資料夾(訓練資料夾, 驗證資料夾)\n",
     "\n",
-    "# 輸出每個文件的IoU\n",
-    "total_iou = 0\n",
-    "for train_file, val_file, iou in ious:\n",
-    "    print(f\"Valid : {val_file}\")  # 驗證集標籤\n",
-    "    print(f\"Train : {train_file}\")  # 訓練集遮罩\n",
-    "    print(f\"IoU: {iou}\")\n",
-    "    print(\"\\n\")\n",
-    "    total_iou += iou\n",
+    "# 輸出每對文件的 IoU，並計算總 IoU\n",
+    "總_iou = 0\n",
+    "for 訓練檔案, 驗證檔案, iou in ious:\n",
+    "    print(f\"驗證檔案 : {驗證檔案}\")  # 驗證集標籤\n",
+    "    print(f\"訓練檔案 : {訓練檔案}\")  # 訓練集遮罩\n",
+    "    print(f\"IoU: {iou}\\n\")\n",
+    "    總_iou += iou\n",
     "\n",
-    "# 計算並輸出平均IoU\n",
-    "average_iou = total_iou / len(ious) if ious else 0\n",
-    "print(f\"Average IoU: {average_iou}\")"
+    "# 計算並輸出平均 IoU\n",
+    "平均_iou = 總_iou / len(ious) if ious else 0\n",
+    "print(f\"平均 IoU: {平均_iou}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "目前圖片-IOU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "驗證檔案 : background_caries-0.845815-33-1214_1_2022041830.png\n",
+      "訓練檔案 : caries-0.845815-33-1214_1_2022041830_combined_cropped_resized.png\n",
+      "IoU: 0.6230468857873487\n",
+      "\n",
+      "驗證檔案 : background_caries-0.6741573-260-760_1_2022052768.png\n",
+      "訓練檔案 : caries-0.6741573-260-760_1_2022052768_combined_cropped_resized.png\n",
+      "IoU: 0.37177495758697426\n",
+      "\n",
+      "驗證檔案 : background_caries-0.8304498-273-734_1_2022041847.png\n",
+      "訓練檔案 : caries-0.8304498-273-734_1_2022041847_combined_cropped_resized.png\n",
+      "IoU: 0.4812077558544412\n",
+      "\n",
+      "驗證檔案 : background_caries-0.8421053-22-1236_0_2022052776.png\n",
+      "訓練檔案 : caries-0.8421053-22-1236_0_2022052776_combined_cropped_resized.png\n",
+      "IoU: 0.5476137600213196\n",
+      "\n",
+      "驗證檔案 : background_caries-0.8480566-33-1214_0_2022042506.png\n",
+      "訓練檔案 : caries-0.8480566-33-1214_0_2022042506_combined_cropped_resized.png\n",
+      "IoU: 0.5939601769911504\n",
+      "\n",
+      "驗證檔案 : background_caries-0.8510638-268-743_1_2022060601150.png\n",
+      "訓練檔案 : caries-0.8510638-268-743_1_2022060601150_combined_cropped_resized.png\n",
+      "IoU: 0.46605566488614003\n",
+      "\n",
+      "驗證檔案 : background_caries-0.8510638-268-743_1_2022060601151.png\n",
+      "訓練檔案 : caries-0.8510638-268-743_1_2022060601151_combined_cropped_resized.png\n",
+      "IoU: 0.5099545224861041\n",
+      "\n",
+      "驗證檔案 : background_caries-0.8510638-270-740_1_2022012069.png\n",
+      "訓練檔案 : caries-0.8510638-270-740_1_2022012069_combined_cropped_resized.png\n",
+      "IoU: 0.4693946094209186\n",
+      "\n",
+      "驗證檔案 : background_caries-0.8510638-270-740_1_2022030743.png\n",
+      "訓練檔案 : caries-0.8510638-270-740_1_2022030743_combined_cropped_resized.png\n",
+      "IoU: 0.5395128585255884\n",
+      "\n",
+      "驗證檔案 : background_caries-0.8510638-271-738_0_2022060601156.png\n",
+      "訓練檔案 : caries-0.8510638-271-738_0_2022060601156_combined_cropped_resized.png\n",
+      "IoU: 0.43422690121422086\n",
+      "\n",
+      "平均 IoU: 0.5036748092774207\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "from natsort import natsorted\n",
+    "\n",
+    "def 計算_iou(mask1, mask2):\n",
+    "    # 計算 IoU\n",
+    "    mask1 = np.array(mask1).astype(bool)\n",
+    "    mask2 = np.array(mask2).astype(bool)\n",
+    "    intersection = np.logical_and(mask1, mask2).sum()\n",
+    "    union = np.logical_or(mask1, mask2).sum()\n",
+    "    iou = intersection / union if union != 0 else 0\n",
+    "    return iou\n",
+    "\n",
+    "def resize_if_needed(mask1, mask2):\n",
+    "    # 比較兩個遮罩的尺寸，若不一致，將較大的圖片縮放至較小圖片的尺寸\n",
+    "    if mask1.size != mask2.size:\n",
+    "        if mask1.size[0] * mask1.size[1] > mask2.size[0] * mask2.size[1]:\n",
+    "            # mask1 比 mask2 大，將 mask1 縮放到 mask2 的尺寸\n",
+    "            mask1 = mask1.resize(mask2.size, Image.NEAREST)\n",
+    "        else:\n",
+    "            # mask2 比 mask1 大，將 mask2 縮放到 mask1 的尺寸\n",
+    "            mask2 = mask2.resize(mask1.size, Image.NEAREST)\n",
+    "    return mask1, mask2\n",
+    "\n",
+    "def 處理資料夾(訓練資料夾, 驗證資料夾):\n",
+    "    # 自然排序讀取訓練和驗證資料夾中的圖片文件\n",
+    "    訓練文件 = natsorted([f for f in os.listdir(訓練資料夾) if f.endswith('.png')])\n",
+    "    驗證文件 = natsorted([f for f in os.listdir(驗證資料夾) if f.endswith('.png')])\n",
+    "\n",
+    "    # 檢查訓練和驗證資料夾的文件數量是否一致\n",
+    "    if len(訓練文件) != len(驗證文件):\n",
+    "        raise ValueError(\"訓練資料夾和驗證資料夾中的文件數量不一致。\")\n",
+    "    \n",
+    "    ious = []\n",
+    "    for 訓練檔案, 驗證檔案 in zip(訓練文件, 驗證文件):\n",
+    "        訓練路徑 = os.path.join(訓練資料夾, 訓練檔案)\n",
+    "        驗證路徑 = os.path.join(驗證資料夾, 驗證檔案)\n",
+    "        try:\n",
+    "            # 打開並轉換圖片為灰階遮罩\n",
+    "            mask_train = Image.open(訓練路徑).convert('L')\n",
+    "            mask_val = Image.open(驗證路徑).convert('L')\n",
+    "            \n",
+    "            # 檢查並調整圖片尺寸\n",
+    "            mask_train, mask_val = resize_if_needed(mask_train, mask_val)\n",
+    "            \n",
+    "            # 計算 IoU\n",
+    "            iou = 計算_iou(mask_train, mask_val)\n",
+    "            ious.append((訓練檔案, 驗證檔案, iou))\n",
+    "        except Exception as e:\n",
+    "            print(f\"處理 {訓練檔案} 和 {驗證檔案} 時出錯：{e}\")\n",
+    "            continue  # 跳過無法處理的文件\n",
+    "    return ious\n",
+    "\n",
+    "# 訓練集和驗證集的資料夾路徑\n",
+    "訓練資料夾 = r\"C:\\Users\\SSTek\\Desktop\\LianChia\\task\\v4.40\\task1and2\\imgv0.2\\color\"  # 替換為實際路徑\n",
+    "驗證資料夾 = r\"C:\\Users\\SSTek\\Desktop\\LianChia\\task\\v4.40\\task1and2\\imgv0.2\\processedv0.2\"  # 替換為實際路徑\n",
+    "\n",
+    "# 計算資料夾中對應文件的 IoU\n",
+    "ious = 處理資料夾(訓練資料夾, 驗證資料夾)\n",
+    "\n",
+    "# 輸出每對文件的 IoU，並計算總 IoU\n",
+    "總_iou = 0\n",
+    "for 訓練檔案, 驗證檔案, iou in ious:\n",
+    "    print(f\"驗證檔案 : {驗證檔案}\")  # 驗證集標籤\n",
+    "    print(f\"訓練檔案 : {訓練檔案}\")  # 訓練集遮罩\n",
+    "    print(f\"IoU: {iou}\\n\")\n",
+    "    總_iou += iou\n",
+    "\n",
+    "# 計算並輸出平均 IoU\n",
+    "平均_iou = 總_iou / len(ious) if ious else 0\n",
+    "print(f\"平均 IoU: {平均_iou}\")\n"
    ]
   }
  ],
