--- a/v4.40/task1and2/postprocessing_backgound_mask.ipynb
+++ b/v4.40/task1and2/postprocessing_backgound_mask.ipynb
@@ -701,12 +701,7 @@
     "    # 將 closing 轉換為灰度圖像\n",
     "    closing_gray = cv2.cvtColor(closing, cv2.COLOR_BGR2GRAY)\n",
     "    # 將黑色遮罩應用到推理圖像上\n",
-    "    inference_image[closing_gray == 0] = [0]  # 只覆蓋黑色部分\n",
-    "\n",
-    "    # 保存處理後的圖片\n",
-    "    #output_image_path = os.path.join(output_dir, f\"{base_filename}.png\")\n",
-    "    #cv2.imencode('.png', inference_image)[1].tofile(output_image_path)\n",
-    "    #print(f\"保存處理後的圖片到: {output_image_path}\")\n"
+    "    inference_image[closing_gray == 0] = [0]  # 只覆蓋黑色部分\n"
    ]
   },
   {
